--- a/arpw.css
+++ b/arpw.css
@@ -1,6 +1,6 @@
 /*
 Description: Custom CSS for the Advanced Random Posts Widget.
-Version: 1.0
+Version: 1.1
 Author: Satrya
 License: GPLv2
 */
@@ -28,12 +28,11 @@ License: GPLv2
 	margin-bottom: 0 !important;
 	font-weight: normal;
 	font-size: 12px !important;
-	font-family: Arial, sans-serif;
-	line-height: 1.5em;
+	line-height: 1.5;
 }
 
 .arpw-alignleft {
-	border: 1px solid #EEE !important;
+	border: 1px solid #eee !important;
 	box-shadow: none !important;
 	display: inline;
 	float: left;
@@ -42,14 +41,12 @@ License: GPLv2
 }
 
 .arpw-summary {
-	font-family: Arial, sans-serif;
 	font-size: 12px;
 }
 
 .arpw-time {
 	color: #bbb;
 	font-size: 11px;
-	font-family: Arial, sans-serif;
 }
 
 .arpw-clearfix:before,
